02_HTML. ссылки и таблицы

--- a/home/02_HTML/base_1_links.html
+++ b/home/02_HTML/base_1_links.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<HTML lang="en">
-    <HEAD>
-        <META charset="utf-8">
-        <TITLE>Пример страницы</TITLE>
-    </HEAD> 
-    <BODY> 
-       <H1>HOW-TO: Программа на Python, Часть 1</H1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <H1>HOW-TO: Программа на Python, Часть 1</H1>
        <ul>
-       <li><em>Программа на Python — часть 1</em></li>
-       <li><em>Программа на Python — часть 2</em></li>
-       <li><em>Программа на Python — часть 3</em></li>
+       <li><a href="index.html"><em>Программа на Python — часть 1</em></a></li>
+       <li><a href="index_2.html"><em>Программа на Python — часть 2</em></a></li>
+       <li><a href="index_3.html"><em>Программа на Python — часть 3</em></a></li>
        </ul>
-       <h2>Содержание</h2>
+       <h2 id="Содержание">Содержание</h2>
        <h3>HOW-TO: Программа на Python, Часть 1</h3>
        <ul>
-       <li><u>Наша первая программа</u></li>
-       <li><u>Пример цикла For</u></li>
+      <a href="#Наша первая программа"> <li>Наша первая программа</li></a>
+       <a href="#Пример цикла For"><li>Пример цикла For</li></a>
        </ul>
        <p>Из множества существующих языков программирования Python — один из самых лёгких в изучении.<br>
         Он создан в конце 80-х годов XX века, но с тех пор он сильно изменился. Хотя Python входит в<br>
@@ -24,33 +25,35 @@
         программирование графических интерфейсов <u>(GUI)</u>. Давайте создадим простую программу прямо<br>
         сейчас.</p>
        <h2>Наша первая программа</h2>
-       <p>Наберём код в текстовом редакторе (например, в <b>gedit</b>). Потом мы разберёмся, что делает каждая<br>
+       <a href="#Содержание"> <p>К содержанию</p></a>
+       <p id="Наша первая программа">Наберём код в текстовом редакторе (например, в <b>gedit</b>). Потом мы разберёмся, что делает каждая<br>
           строка и пойдём дальше.</p><br>
        <p>Введите эти 4 строки:</p>
-       <cite>#!/usr/bin/env python<br>
+       <tt>#!/usr/bin/env python<br>
          print 'Hello. I am a python<br> 
          program.'name = raw_input("What is your name?")<br>
-         print "Hello there, " + name + "!"<br></cite>
+         print "Hello there, " + name + "!"<br></tt>
        <p>Это всё. Сохраните файл как <b>hello.py</b> в любом месте. Я предлагаю сохранить его в папке<br>
          <b>python_examples</b> в домашнем каталоге. Этот пример показывает, как просто написать программу на<br>
          Python. Для запуска программы нужно сделать её файл исполняемым. Для этого введите в терминале</p><br>
-       <p><cite><u><b>chmod +x hello.py</b></u></cite></p>
+       <p><cite><b>chmod +x hello.py</b></cite></p>
        <p>в папке, в которой вы сохранили программу. Теперь запустите её.</p>
 
-       <p><cite>greg@earth:~/python_examples$ ./hello.py<br>
+       <p><tt>greg@earth:~/python_examples$ ./hello.py<br>
                 Hello. I am a python program.<br>
                 What is your name? Ferd Burphel<br>
                 Hello there, Ferd Burphel!<br>
-                greg@earth:~/python_examples$<br></cite></p>
+                greg@earth:~/python_examples$<br></tt></p>
        <p>Вот и всё.</p>
-       <h2>Пример цикла For</h2>
+       <h2 id="Пример цикла For">Пример цикла For</id></h2>
+       <a href="#Содержание"> <p>К содержанию</p></a>
        <p>Теперь давайте рассмотрим пример программирования цикла. Запустите текстовый редактор и<br>
           наберите следующую программу:</p>
-       <p><cite>#!/usr/bin/env python<br>
+       <p><tt>#!/usr/bin/env python<br>
           for cntr in range(0,10):<br>
-          print cntr</cite></p>
-       <p>Не забудьте поставить символ табуляции перед строкой «print cntr». Это важно. В Python для<br>
-          указания на блоки кода используются не круглые «(» и фигурные «{» скобки как в других языках<br>
+          print cntr</tt></p>
+       <p><var>Не забудьте поставить символ табуляции перед строкой «print cntr»</var>. Это важно. В Python для<br>
+          указания на блоки кода используются не круглые «<b>(</b>» и фигурные «<b>{</b>» скобки как в других языках<br>
           программирования, а отступы.</p>
-    </BODY>
-</HTML>
+</body>
+</html>
