--- a/home/02_HTML/base_3_links.html
+++ b/home/02_HTML/base_3_links.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-<HTML lang="en">
-<HEAD>
-        <META charset="utf-8">
-        <TITLE>Пример страницы</TITLE>
-</HEAD> 
-<BODY> 
-       <H1>HOW-TO: Программа на Python, Часть 3</H1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <H1>HOW-TO: Программа на Python, Часть 3</H1>
        <ul>
-       <li><em>Программа на Python — часть 1</em></li>
-       <li><em>Программа на Python — часть 2</em></li>
-       <li><em>Программа на Python — часть 3</em></li>
+       <li><a href="index.html"><em>Программа на Python — часть 1</em></a></li>
+       <li><a href="index_2.html"><em>Программа на Python — часть 2</em></a></li>
+       <li><a href="index_3.html"><em>Программа на Python — часть 3</em></a></li>
        </ul>
-       <h2>Содержание</h2>
+       <h2 id="Содержание">Содержание</h2>
        <h3>HOW-TO: Программа на Python, Часть 3</h3>
        <ul>
-       <li><u>Модули</u></li>
-       <li><u>Функции</u></li>
+       <li><a href="#Модули"> Модули</a></li>
+       <li><a href="#Функции">Функции</a></li>
 <hr>
        </ul>
         <p>В прошлый раз мы изучали списки, подстановку переменных, комментарии, сравнение и<br>
            присвоение, операторы <b>if</b> и <b>while</b>. Я обещал, что в этой части мы изучим модули и<br>
            функции. Давайте начнём.</p>
-        <h2>Модули</h2>
+        <h2 id="Модули">Модули</h2>
+        <p><a href="#Содержание">К содержанию</a></p>
            Модули предлагают способ расширить программирование на Python. Вы можете создать<br>
            свои модули, использовать те, которые поставляются с Python или которые написали<br>
            другие. В самом Python есть сотни модулей, которые облегчают написание программ.<br>
@@ -32,20 +34,21 @@
            необходимо импортировать его в программу. Один из модулей, поставляемых с Python,<br>
            называется «random». Он даёт возможность генерировать псевдослучайные числа. Мы<br>
            используем этот модуль в нашем первом примере.
-        <p><em> #=======================================<br>
+        <p><tt> #=======================================<br>
            # random_example.py<br>
            # Module example using the random module<br>
            #=======================================<br>
            import random<br>
            # print 14 random integers<br>
            for cntr in range(1,15):<br>
-           print random.randint(1,10)</em></p>
+           print random.randint(1,10)</tt></p>
         <p>Давайте разберём код по строкам. Первые четыре строки — это комментарии, о которых<br>
            мы говорили в прошлый раз. Пятая строка говорит Python, что нужно использовать<br>
            модуль «random». Мы должны явно указать Python на это.</p>
 <hr>
 
-        <h2>Функции</h2>
+        <h2 id="Функции">Функции</h2>
+        <p><a href="#Содержание">К содержанию</a></p>
 
            Когда мы импортировали модуль random, мы использовали функцию <b>randint()</b>. Функция<br>
            — это блок кода, который создан для того, чтобы вызывать его в программе, обычно,<br>
@@ -56,28 +59,29 @@
            сложить их, перемножить, вычесть одно из другого, затем вывести на экран эти числа и<br>
            результаты одновременно. Допустим, нам нужно сделать это три раза для трёх наборов<br>
            чисел. Тогда наш пример будет выглядеть как код ниже.
-        <p><em> #silly example<br>
+        <p><tt> #silly example<br>
            print '%d + %d = %d ' % (1,2,1+2)<br>
            print '%d * %d = %d ' % (1,2,1*2)<br>
-           print '%d - %d = %d ' % (1,2,1-2)</em><br></p>
-        <p><em>print '\n'<br>
+           print '%d - %d = %d ' % (1,2,1-2)</tt><br></p>
+        <p><tt>print '\n'<br>
            print '%d + %d = %d ' % (1,4,1+4)<br>
            print '%d * %d = %d ' % (1,4,1*4)<br>
-           print '%d - %d = %d ' % (1,4,1-4)</em><br></p>
-        <p><em>print '%d + %d = %d ' % (10,5,10+5)<br>
+           print '%d - %d = %d ' % (1,4,1-4)</tt><br></p>
+        <p><tt>print '%d + %d = %d ' % (10,5,10+5)<br>
            print '%d * %d = %d ' % (10,5,10*5)<br>
            print '%d - %d = %d ' % (10,5,10-5)<br>
-           print '\n'</em></p>
-        <p>Здесь нужно не только набрать много текста, но и непременно возникнут ошибки как при<br>
-           написании, так и при внесении изменений. Вместо этого мы создадим функцию, которую<br>
-           назовём <b>«DoTwo»</b>. Она будет каждый раз брать два числа, проводить математические<br>
-           операции и выводить результат. Начнём с ключевого слова <b>«def»</b>, которое сигнализирует<br>
-           о том, что мы собираемся определить функцию. После слова <b>«def»</b> добавим название<br>
-           функции и список параметров, если таковые имеются, в круглых скобках. Эту строку<br>
-           необходимо завершить двоеточием. Код функции набирается с отступом. Наш<br>
-           улучшенный простой пример (No2) показан ниже.</p> 
+           print '\n'</tt></p>
+        <p>Модули предлагают способ расширить программирование на Python. Вы можете создать свои,<br>
+            модули, использовать те, которые поставляются с Python или которые написали другие. В самом<br>
+            Python есть сотни модулей, которые облегчают написание программ. Список модулей, поставляемых<br>
+            с Python, находится по адресу: <a href="http://docs.python.org/modindex.html" target="new">http://docs.python.org/modindex.html</a>. Некоторые модули<br>
+            предназначены для определённых операционных систем, но большинство из них<br>
+            кроссплатформенные и работают одинаково на <a href="https://ru.wikipedia.org/wiki/Linux" target="new">Linux</a>, <a href="https://www.apple.com/ru/mac/" target="new">Mac</a> и <a href="https://www.microsoft.com/ru-ru/windows" target="new">Microsoft Windows</a>. Для использования<br>
+            внешнего модуля необходимо импортировать его в программу. Один из модулей, поставляемых с<br>
+            Python, называется «random». Он даёт возможность генерировать псевдослучайные числа. Мы<br>
+            используем этот модуль в нашем первом примере.</p> 
 
-           <p><em>#silly example 2...still silly, but better<br>
+           <p><tt>#silly example 2...still silly, but better<br>
            def DoTwo(num1,num2):<br>
            print '%d + %d = %d ' % (num1,num2,num1+num2)<br>
            print '%d * %d = %d ' % (num1,num2,num1*num2)<br>
@@ -85,10 +89,10 @@
            print '\n'<br>
            DoTwo(1,2)<br>
            DoTwo(1,4)<br>
-           DoTwo(10,5)</em><br></p>
+           DoTwo(10,5)</tt><br></p>
 
         <p>   Как видите, здесь написано меньше кода — 8 строк вместо 12. Если нам нужно будет что-<br>
            либо поменять в функции, мы сможем сделать это, не создавая проблем для нашей<br>
-           программы. Чтобы вызвать функцию, нужно написать её имя и параметры.</p>
-</BODY>
-</HTML>
+           программы. Чтобы вызвать функцию, нужно написать её имя и параметры.</p> 
+</body>
+</html>
