--- a/home/site.by/promo.html
+++ b/home/site.by/promo.html
@@ -6,10 +6,90 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Акции</h1>
-    <ul>
-        <li><a href="promo/last.html">Актуальные</a></li>
-        <li><a href="promo/old.html">Прошедшие</a></li>
-    </ul>
+<h1>Акции</h1>
+<h2>Горизонтальное меню</h2>
+<p><a href="about.html">Главная</a> |<a href="../site.by/catalog.html">Каталог</a> | <a href="promo.html">Акции</a> |<a href="index.html">О нас</a></p>
+<H1>Меню список</H1>
+<ul>
+    <li><a href="about.html"> Главная</a></li>
+    <li><a href="catalog.html"> Каталог</a></li>
+    <li><a href="promo.html"> Акции</a></li>
+    <li><a href="index.html"> О нас</a></li>
+</ul>
+<H2>Меню с вложенным списком</H2>
+<ul>
+    <li><a href="about.html">Главная</a>
+<ul>
+    <li><a href="news/news.html">Новости</a></li>
+</ul>
+    </li>
+</ul>
+<ul>
+    <li><a href="catalog.html"> Каталог</a>
+<ul>
+    <li><a href="catalog/a_w.html">Осень-Зима</a></li>
+    <li><a href="catalog/s_s.html">Весна-Лето</a></li>
+</ul>
+    </li>
+</ul>
+<ul>
+    <li><a href="promo.html"> Акции</a>
+<ul>
+    <li><a href="promo/last.html">Актуальные</a></li>
+    <li><a href="promo/old.html">Прошедшие</a></li>
+</ul>
+    </li>
+</ul>       
+<ul>
+    <li><a href="index.html"> О нас</a>
+<ul>
+    <li><a href="about/contacts.html">Контакты</a></li>
+    <li><a href="about/scheme.html">Проезд</a></li>
+</ul>
+    </li>
+</ul>    
+</ul> 
+<H2>Меню таблица с вложенными таблицами</H2>  
+<table border="0">
+<tr>
+    <td><a href="about.html">Главная</a></td>
+</tr>
+<tr>
+    <td align="center" valign="middle"><a href="news/news.html">Новости</a></td>
+</tr>
+<tr>
+    <td><a href="catalog.html">Каталог</a></td>
+</tr>
+<tr>
+    <td col width="90`%"align="right" valign="middle"><a href="catalog/a_w.html">Осень-Зима</a></td>
+</tr>
+<tr>
+    <td align="right" valign="middle"><a href="catalog/s_s.html">Весна-Лето</a></td>
+</tr>
+<tr>
+    <td><a href="promo.html">Акции</a></td>
+</tr>
+<tr>
+    <td align="right" valign="middle"><a href="promo/last.html">Актуальные</a></td>
+</tr>
+<tr>
+    <td align="right" valign="middle"><a href="promo/old.html">Прошедшие</a></td>
+</tr>
+<tr>
+    <td><a href="index.html">О нас</a></td>
+</tr>
+<tr>
+   <td align="center" valign="middle"><a href="about/contacts.html">Контакты</a></td> 
+</tr>
+<tr>
+    <td align="middle" valign="middle"><a href="about/scheme.html">Проезд</a></td>
+</tr>
+
+
+
+
+
+
+</table>
 </body>
 </html>
