--- a/home/01_CSS/add/add.html
+++ b/home/01_CSS/add/add.html
@@ -6,37 +6,34 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Bad+Script&display=swap');
+        @import "style1.css";
+        @import "imp.css";
     </style>
-
 </head>
 <body>
 <h1>Пример сопроводительного письма программиста</h1>
-<div class="div1">10943, Одесса - 43,ул.Малышева,33,кв.15 </div>
-    <div class="title">15 марта 2006г.Г-ну Иванову Петру Васильевичу,<br>
+<div class="text">10943, Одесса - 43,ул.Малышева,33,кв.15</div><br>
+<div>15 марта 2006г.Г-ну Иванову Петру Васильевичу,<br>
     Менеджеру по персоналу <br>
-    Компании ВСС,</div>
-    <div class="ltitle">10946,Днепропетровск-46,ул.Валдая,47</div>
-<p class="p1">Уважаемый г-н Иванов!</p>
-<p class="p2">
+    Компании ВСС,</div><br>
+<div class="text">10946,Днепропетровск-46,ул.Валдая,47</div><br>
+<p class="txt">Уважаемый г-н Иванов!</p>
+<p>
     Меня заинтересовала вакансия на должность разработчика ПО,размещенная на сайте www.jobs.ua . Мой выбор <br>
     был мотивирован к проектированию ПО и БД.
 </p>
-<p class="p2">
+<p>
     Владею базовыми знаниями SQL-Sybase,OOAEOOD,UML;Power Builder (или VC++,Visual Basicю,Java,<br>
     Delphi);NET. Имею опыт разработки приложений в сфере IT,благодаря которому могу внести свой вклад в <br>
     успешное продвижение вашей компании.Прилагаю копию своего резюме,с детальным описанием квалификации.
 </p>
-<p class="p2">
+<p>
     Предлагаю на рассмотрение свою кандидатуру в качестве разработчика ПО.Был бы рад встречи с вами.Вы <br>
     можете связаться со мной по указанному адресу или по телефону (518) 271-9999.
 </p>
-<div>Спасибо за уделенное время и внимание.</div>
+<h4>Спасибо за уделенное время и внимание.</h4>
 
-<p class="end">Сергей Миронов</p>
-
-
+<h4>Сергей Миронов</h4>
 </body>
 </html>
